--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": ">=20.11.1"
   },
   "dependencies": {
+    "lucide-react": "^0.515.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1"
